--- a/makemake-2.css
+++ b/makemake-2.css
@@ -5,44 +5,40 @@ body {
 }
 
 .header {
-  display: inline-block;
-  position: relative;
-  margin-top: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
 }
 .hamburger {
   position: absolute;
-  margin-left: 1800px;
+  right: 40px;
   transform: translateY(-50%);
   margin-top: 60px;
 }
 
 .RPS {
   position: absolute;
-  margin-top: 60px;
-  margin-left: 1600px;
+  top: 60px;
+  right: 100px;
   transform: translateY(-50%);
 }
 
 .makemake {
-  margin-top: 60px;
-  margin-left: 70px;
+  top: 60px;
+  left: 70px;
   transform: translateY(-50%);
   position: absolute;
 }
 
 .Editors {
   font-size: 22px;
-  transform: translateY(-50%);
-  margin-top: 80px;
-  display: inline block;
-  position: absolute;
-  margin-inline-start: 45%;
   text-align: center;
+  margin: 0;
 }
-
-}
- .hover {
-color: white;
+.hover {
+  color: white;
 }
 
 .capsule {
@@ -66,7 +62,6 @@ color: white;
   position: absolute;
   left: 70px;
 }
-
 
 .list2 {
   display: flex;
